--- a/package.json
+++ b/package.json
@@ -27,23 +27,22 @@
   },
   "dependencies": {
     "codemirror": "^5.53.2",
-    "devicons": "^1.8.0",
     "knex": "^0.21.1",
     "material-design-icons": "^3.0.1",
     "source-map-support": "^0.5.16",
+    "spectre.css": "^0.5.8",
     "vue-i18n": "^8.17.4",
-    "vue-router": "^3.1.6",
     "vuex": "^3.3.0",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "electron": "^8.2.4",
     "electron-builder": "^22.4.1",
     "electron-devtools-installer": "^3.0.0",
     "electron-webpack": "^2.8.2",
     "electron-webpack-vue": "^2.4.0",
     "eslint": "^6.8.0",
-    "babel-eslint": "^10.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.1.0",
