--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "description": "A multi-platform easy to use SQL client. ",
   "license": "MIT",
+  "repository": "https://github.com/Fabio286/antares.git",
   "scripts": {
     "dev": "electron-webpack dev",
     "compile": "electron-webpack",
@@ -29,6 +30,8 @@
     "codemirror": "^5.53.2",
     "knex": "^0.21.1",
     "material-design-icons": "^3.0.1",
+    "mssql": "^6.2.0",
+    "mysql": "^2.18.1",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.8",
     "vue-i18n": "^8.17.4",
@@ -49,7 +52,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "webpack": "^4.43.0"
