--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-log": "^4.2.0",
     "electron-updater": "^4.3.1",
     "knex": "^0.21.1",
+    "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
     "mssql": "^6.2.0",
     "mysql": "^2.18.1",
