--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "codemirror": "^5.54.0",
     "electron-log": "^4.2.0",
     "electron-updater": "^4.3.1",
-    "knex": "^0.21.1",
     "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
     "mssql": "^6.2.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
     "pg": "^8.2.1",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.8",
