--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "antares",
   "productName": "Antares",
   "version": "0.0.0",
-  "description": "A cross-platform easy to use SQL client. ",
+  "description": "A cross-platform easy to use SQL client.",
   "license": "MIT",
   "repository": "https://github.com/Fabio286/antares.git",
   "scripts": {
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "codemirror": "^5.54.0",
-    "electron-log": "^4.2.0",
+    "electron-log": "^4.2.1",
     "electron-updater": "^4.3.1",
     "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
@@ -40,7 +40,8 @@
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.8",
     "vue-click-outside": "^1.1.0",
-    "vue-i18n": "^8.18.1",
+    "vue-i18n": "^8.18.2",
+    "vue-virtual-scroller": "^1.0.10",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0",
     "vuex-persist": "^2.2.0"
@@ -55,7 +56,7 @@
     "electron-webpack-vue": "^2.4.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
