--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "antares",
   "productName": "Antares",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha",
   "description": "A cross-platform easy to use SQL client.",
   "license": "MIT",
   "repository": "https://github.com/Fabio286/antares.git",
@@ -35,7 +35,6 @@
     "material-design-icons": "^3.0.1",
     "mssql": "^6.2.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
     "pg": "^8.2.1",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.8",
