--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "cross-env NODE_ENV=development electron-webpack dev",
     "compile": "electron-webpack",
     "dist": "cross-env NODE_ENV=production npm run compile && electron-builder",
-    "dist:dir": "cross-env NODE_ENV=production npm run dist --dir -c.compression=store -c.mac.identity=null"
+    "dist:dir": "cross-env NODE_ENV=production npm run dist --dir -c.compression=store -c.mac.identity=null",
+    "publish": "build -p always"
   },
   "author": "Fabio Di Stasio <fabio286@gmail.com>",
   "build": {
@@ -33,6 +34,7 @@
     "electron-updater": "^4.3.1",
     "lodash": "^4.17.15",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.26.0",
     "mssql": "^6.2.0",
     "mysql": "^2.18.1",
     "pg": "^8.2.1",
