--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compile": "electron-webpack",
     "dist": "cross-env NODE_ENV=production npm run compile && electron-builder",
     "dist:dir": "cross-env NODE_ENV=production npm run dist --dir -c.compression=store -c.mac.identity=null",
-    "publish": "cross-env NODE_ENV=production npm run dist -p always"
+    "publish": "electron-builder -p always"
   },
   "author": "Fabio Di Stasio <fabio286@gmail.com>",
   "build": {
@@ -49,7 +49,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
-    "electron": "^9.0.5",
+    "electron": "^8.3.4",
     "electron-builder": "^22.7.0",
     "electron-devtools-installer": "^3.1.0",
     "electron-webpack": "^2.8.2",
