--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "spectre.css": "^0.5.8",
     "vue-click-outside": "^1.1.0",
     "vue-i18n": "^8.18.2",
+    "vue-the-mask": "^0.11.1",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.5.1",
     "vuex-persist": "^2.2.0"
