--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
     "vue": "^2.6.11",
     "webpack": "^4.44.1"
   }
