--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       os: osx
       osx_image: xcode10.1
       script:
-        - npm run publish -- --mac --win
+        - npm run build -- --mac --win -p always
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
     - stage: Deploy linux
@@ -37,4 +37,4 @@ jobs:
       os: linux
       dist: trusty
       script:
-        - npm run publish
+        - npm run build -- --linux -p always
