--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
     "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1"
   }
 }
