style: line break from CRLF to LF

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
         ],
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "brace-style": [
             "error", 
