--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ jobs:
     - stage: Test
       script:
         - npm test
+
     - stage: Deploy Linux & Windows
       if: tag IS present
       os: linux
@@ -30,9 +31,17 @@ jobs:
         - docker run --rm --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') -v ${PWD}:/project -v ~/.cache/electron:/root/.cache/electron -v ~/.cache/electron-builder:/root/.cache/electron-builder electronuserland/builder:wine /bin/bash -c "npm run build -- --linux --win -p always"
       before_cache:
         - rm -rf $HOME/.cache/electron-builder/wine
+
     - stage: Deploy Mac
       if: tag IS present
       os: osx
       osx_image: xcode10.2
       script:
         - npm run build -- -p always
+    
+    - stage: Deploy ARM Linux
+      if: tag IS present
+      os: linux
+      arch: arm64
+      script:
+        - npm run build -- --linux AppImage -p always
