ci: update travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: node_js
 node_js: 12
 
-before_install:
-  - npm install
-
 cache:
   directories:
     - node_modules
@@ -20,6 +17,9 @@ env:
 jobs:
   include:
     - stage: Test
+      before_install:
+        - sudo apt-get install libsecret-1-dev
+        - npm install
       script:
         - npm test
 
@@ -27,6 +27,9 @@ jobs:
       if: tag IS present
       os: linux
       services: docker
+      before_install:
+        - sudo apt-get install libsecret-1-dev
+        - npm install
       script:
         - docker run --rm --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') -v ${PWD}:/project -v ~/.cache/electron:/root/.cache/electron -v ~/.cache/electron-builder:/root/.cache/electron-builder electronuserland/builder:wine /bin/bash -c "npm run build -- --linux --win -p always"
       before_cache:
@@ -35,6 +38,8 @@ jobs:
     - stage: Deploy Mac
       if: tag IS present
       os: osx
+      before_install:
+        - npm install
       osx_image: xcode10.2
       script:
         - npm run build -- -p always
