feat: better security connections credentials storage

--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   "dependencies": {
     "@mdi/font": "^5.8.55",
     "electron-log": "^4.3.0",
+    "electron-store": "^6.0.1",
     "electron-updater": "^4.3.5",
+    "keytar": "^7.3.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "monaco-editor": "^0.20.0",
