refactor: migrated to ace from monaco-editor

--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
   },
   "dependencies": {
     "@mdi/font": "^5.8.55",
+    "ace-builds": "^1.4.12",
     "electron-log": "^4.3.0",
     "electron-store": "^6.0.1",
     "electron-updater": "^4.3.5",
     "keytar": "^7.3.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "monaco-editor": "^0.20.0",
     "mssql": "^6.2.3",
     "mysql": "^2.18.1",
     "pg": "^8.5.1",
@@ -80,7 +80,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.1.0",
-    "monaco-editor-webpack-plugin": "^1.9.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
     "standard-version": "^9.0.0",
