--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
         "AppImage"
       ],
       "category": "Development"
+    },
+    "appImage": {
+      "license": "./LICENSE",
+      "category": "Development"
     }
   },
   "electronWebpack": {
