--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "vue-i18n": "^8.22.2",
     "vue-the-mask": "^0.11.1",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.0",
-    "vuex-persist": "^3.1.3"
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
