--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "pg": "^8.5.1",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.9",
+    "v-mask": "^2.2.4",
     "vue-i18n": "^8.22.4",
-    "vue-the-mask": "^0.11.1",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.0"
   },
