--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "moment": "^2.29.1",
     "mssql": "^6.2.3",
     "mysql2": "^2.2.5",
+    "node-sql-parser": "^3.1.0",
     "pg": "^8.5.1",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.9",
