feat(UI): light theme

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,7 +8,8 @@
     "stylelint-scss"
   ],
   "rules": {
-    "at-rule-no-unknown": null
+    "at-rule-no-unknown": null,
+    "no-descending-specificity": null
   },
   "syntax": "scss"
 }
