--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "electron-store": "^7.0.0",
     "electron-updater": "^4.3.5",
     "faker": "^5.3.1",
-    "keytar": "^7.3.0",
     "marked": "^2.0.2",
     "moment": "^2.29.1",
     "mssql": "^6.2.3",
@@ -83,6 +82,7 @@
     "pgsql-ast-parser": "^7.0.2",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.9",
+    "sql-formatter": "^4.0.2",
     "v-mask": "^2.2.4",
     "vue-i18n": "^8.22.4",
     "vuedraggable": "^2.24.3",
