--- a/package.json
+++ b/package.json
@@ -67,10 +67,11 @@
     }
   },
   "dependencies": {
+    "@electron/remote": "^1.1.0",
     "@mdi/font": "^5.9.55",
     "ace-builds": "^1.4.12",
     "electron-log": "^4.3.0",
-    "electron-store": "^7.0.0",
+    "electron-store": "^8.0.0",
     "electron-updater": "^4.3.5",
     "faker": "^5.3.1",
     "marked": "^2.0.2",
@@ -93,7 +94,7 @@
     "cross-env": "^7.0.2",
     "electron": "^12.0.5",
     "electron-builder": "^22.9.1",
-    "electron-devtools-installer": "^3.1.1",
+    "electron-devtools-installer": "^3.2.0",
     "electron-webpack": "^2.8.2",
     "electron-webpack-vue": "^2.4.0",
     "eslint": "^7.24.0",
