--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "vuex": "^3.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.13.14",
     "cross-env": "^7.0.2",
     "electron": "^12.0.5",
     "electron-builder": "^22.9.1",
