--- a/package.json
+++ b/package.json
@@ -43,8 +43,18 @@
     },
     "linux": {
       "target": [
-        "deb",
-        "AppImage"
+        {
+          "target": "deb",
+          "arch": "x64"
+        },
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64",
+            "arm64",
+            "armv7l"
+          ]
+        }
       ],
       "category": "Development"
     },
@@ -79,7 +89,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "pg": "^8.5.1",
-    "pgsql-ast-parser": "^8.1.1",
+    "pgsql-ast-parser": "^7.2.1",
     "source-map-support": "^0.5.16",
     "spectre.css": "^0.5.9",
     "sql-formatter": "^4.0.2",
