--- a/package.json
+++ b/package.json
@@ -108,10 +108,10 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.4",
+    "@babel/eslint-parser": "^7.14.5",
     "cross-env": "^7.0.2",
-    "electron": "^13.1.1",
-    "electron-builder": "22.10.5",
+    "electron": "^13.1.2",
+    "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.2.0",
     "electron-webpack": "^2.8.2",
     "electron-webpack-vue": "^2.4.0",
@@ -120,7 +120,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.10.0",
+    "eslint-plugin-vue": "^7.11.1",
     "sass": "^1.34.1",
     "sass-loader": "^10.2.0",
     "standard-version": "^9.3.0",
